plugins {
    id 'com.android.application'
}

android {
    namespace 'com.laert.rootchecker'
    compileSdk 34

    defaultConfig {
        applicationId 'com.laert.rootchecker'
        minSdk 21
        targetSdk 34
        versionCode 2
        versionName '2.0'
    }

    buildTypes {
        debug {
            debuggable true
        }
        release {
            minifyEnabled false
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
}

dependencies {
}
